Changelog for SiteAtoZ

Version 1.1.0
-------------
Add option to have no CSS file (thanks to Jako)


Version 1.0.3
-------------
Fixed bug in transport package
Added tutorial to docs

Version 1.0.2
-------------
Added JS to hide and show sections

Version 1.0.1
-------------
Added option to combine number categories

SiteAtoZ 1.0.0
-------------------
Initial Version