@@ -78,7 +78,7 @@ The <fixedpre>&where</fixedpre> property will be ignored because it interferes w
   <li><fixedpre>&headingSeparator</fixedpre> - (string) separator to use between letters in heading; Default '&nbsp|&nbsp;'</li>
   <li><fixedpre>&alphabetHeadingStart</fixedpre> - (string) Letter to start with; Default: 'A' (useful for putting separate sections of the alphabet on different pages)</li>
   <li><fixedpre>&alphabetHeadingEnd</fixedpre> - (string) Letter to end with; Default: 'Z'</li>
-  <li><fixedpre>&title</fixedpre> - (string) Field to used for search; Default: pagetitle (other common options: longtitle, alias, menutitle); this should match the first placeholder in your Tpl chunk</li>
+  <li><fixedpre>&title</fixedpre> - (string) Field to used for search; Default: pagetitle (other common options: longtitle, alias, menutitle); Prefix this with tv (no dot) to use a TV for the search; this should match the first placeholder in your Tpl chunk</li>
   <li><fixedpre>&headingLinksTpl</fixedpre> - (string) A tpl containing the entire A-Z heading (useful if you'd like to use images)</li>
   <li><fixedpre>&noData</fixedpre> - (string) String to show if search comes up empty</li>
   <li><fixedpre>&cssFile</fixedpre> - (string) Path to CSS file; use `0` for no CSS file</li>
