@@ -125,26 +125,31 @@ if ($useJS) {
 $whereProperty = !empty($sp['where'])? $sp['where'] : false;
 
 $noData = true;
+
 foreach ($alphabet as $k=>$v) {
-    if ($useJS) {
-        $output .= "\n\n" . '<div style="display:none;" class="az-section" id="a' . $v . '">' . "\n";
-    }
-    if ($combineNumbers && ($v == '[0-9]') ) {
-        $local_where = array(
-            $title . ':REGEXP' => '^[0-9]',
-        );
+    if (substr($title, 0, 2) !== "tv") {
+        if ($combineNumbers && ($v == '[0-9]')) {
+            $local_where = array(
+                $title . ':REGEXP' => '^[0-9]',
+            );
+        } else {
+            $local_where = array(
+                $title . ':LIKE' => $v . '%',
+            );
+        }
+        $sp['where'] = $modx->toJSON($local_where);
     } else {
-        $local_where = array(
-            $title . ':LIKE' => $v . '%',
-        );
+        $tvTitle = substr($title, 2);
+        if ($combineNumbers && ($v == '[0-9]')) {
+            $sp['tvFilters'] = array();
+            for ($i = 0; $i <= 9; $i++) {
+                $sp['tvFilters'][] = $tvTitle . '==' . (string) $i . '%';
+            }
+            $sp['tvFilters'] = implode('||', $sp['tvFilters']);
+        } else {
+            $sp['tvFilters'] = $tvTitle . '==' . $v . '%';
+        }
     }
-    /* ToDo: Some day this may work */
-    /*if ($whereProperty !== false) {
-        $w = $modx->fromJSON($sp['where']);
-        $local_where = array_merge($local_where,$w);
-        unset($w);
-    }*/
-    $sp['where'] = $modx->toJSON($local_where);
 
     $ret = $modx->runSnippet('getResources',$sp);
     if (empty($ret)) {
